--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,3 +2,8 @@
 @import './base/base';
 @import './base/setting';
 @import './components/main/header';
+@import './components/main/footer';
+@import './components/main/loader';
+@import './components/home/home';
+@import './components/chart/chart';
+@import './components/table/table';
