--- a/resources/sass/base/_setting.scss
+++ b/resources/sass/base/_setting.scss
@@ -6,8 +6,33 @@
 
 body {
     margin: 0;
+    height: 100vh;
 }
 
-button:disabled {
-    cursor: default;
+h1 {
+    font-size: $l-size;
 }
+
+table, td, th {
+    border: 1px solid #000000;
+    text-align: left;
+  }
+
+  table {
+    border-collapse: collapse;
+    max-width: 45rem;
+  }
+
+  th {
+    text-align: center;
+  }
+
+  th, td {
+    padding: 0.75rem;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 15rem;
+    max-width: 15rem;
+    text-overflow: clip;
+  }
+
