--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,10 +6,34 @@
 
 body {
   margin: 0;
+  height: 100vh;
 }
 
-button:disabled {
-  cursor: default;
+h1 {
+  font-size: 1.6rem;
+}
+
+table, td, th {
+  border: 1px solid #000000;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  max-width: 45rem;
+}
+
+th {
+  text-align: center;
+}
+
+th, td {
+  padding: 0.75rem;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 15rem;
+  max-width: 15rem;
+  text-overflow: clip;
 }
 
 .header {
@@ -18,8 +42,8 @@ button:disabled {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
-  background: #c0c0c0;
+  z-index: 21;
+  background: #1bbbf0;
 }
 .header a {
   text-decoration: none;
@@ -30,10 +54,147 @@ button:disabled {
   font-weight: bold;
 }
 .header .header__nav {
-  width: 70%;
   margin: 0 auto;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+}
+
+.footer {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #969292;
+}
+.footer a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.loader-container {
+  width: 100vw;
+  height: 100vh;
+  background: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+}
+
+.loader {
+  font-size: 10px;
+  margin: 50px auto;
+  text-indent: -9999em;
+  width: 11em;
+  height: 11em;
+  border-radius: 50%;
+  background: #446b8b;
+  background: linear-gradient(to right, #446b8b 10%, rgba(68, 107, 139, 0) 42%);
+  position: relative;
+  -webkit-animation: load3 1.4s infinite linear;
+  animation: load3 1.4s infinite linear;
+  transform: translateZ(0);
+}
+
+.loader:before {
+  width: 50%;
+  height: 50%;
+  background: #446b8b;
+  border-radius: 100% 0 0 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+}
+
+.loader:after {
+  background: #446b8b;
+  width: 75%;
+  height: 75%;
+  border-radius: 50%;
+  content: "";
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+@-webkit-keyframes load3 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes load3 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.home-container {
+  min-height: 100vh;
+  max-width: 60rem;
+  margin: 4rem auto;
+}
+.home-container section {
+  display: flex;
+  flex-direction: column;
+  padding-top: 2rem;
+  margin-bottom: 3.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.bar-chart {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  gap: 1rem;
+  width: 100%;
+  height: 25rem;
+  padding: 1rem;
+  background-color: #000000;
+  overflow-x: auto;
+}
+.bar-chart .bar-container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 1rem;
+  flex-grow: 1;
+  flex-basis: 0;
+  color: #ffff00;
+}
+.bar-chart .bar-container span {
+  display: flex;
+  align-items: center;
+  font-size: 0.75rem;
+  justify-content: center;
+  text-align: center;
+  white-space: nowrap;
+}
+.bar-chart .bar-container .title {
+  overflow-y: auto;
+}
+.bar-chart .bar-container .bar {
+  width: 3rem;
+  background-color: #ffff00;
+}
+
+.table-container {
+  display: flex;
+  justify-content: center;
+  padding: 1.6rem;
 }
